removing URL (using instead URI)